add new file to existing project as video,audio and about us

--- a/axatproject/index2.html
+++ b/axatproject/index2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap 4 Website Example</title>
+  <title>AXAT</title><!--Title of the Page-->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
@@ -27,10 +27,10 @@
         <a class="nav-link" href="AboutUs.html" target = "_blank">ABOUT US</a>
       </li>
       <li class="nav-item"><!--Discography link-->
-        <a class="nav-link" href="http://www.axat.net/?go=discography&lang=en" target = "_blank">Discography</a>
+        <a class="nav-link" href="Discography.html" target = "_blank">AUDIO COLLECTION</a>
       </li>
       <li class="nav-item"><!--Videos link-->
-        <a class="nav-link" href="https://www.youtube.com/channel/UCnoMCFtQsJzOzxwir2yr-zQ/playlists" target = "_blank">Videos</a>
+        <a class="nav-link" href="VIDEOS.html" target = "_blank">VIDEOS</a>
       </li>    
     </ul>
   </div>  
@@ -42,7 +42,7 @@
     <div class="col-xl-12">
       <h2 class="heading">The begining..</h2>
       
-<div class="fakeimg"></div><!--TEXT UNDER OF PICTURE-->
+      <div class="fakeimg"></div><!--TEXT UNDER OF PICTURE-->
   <p>The group was created in 1986 in Sofia by talented students from the National Academy of Music and the University of Chemical Technology and Metallurgy. The group first live performance was on December 22, 1986.
 
 In 1989 Ahat released their first album Pohodut (Походът, The March. All songs from the album are absolute hits. The most famous are: "The Black Sheep", "Land Of Blindmen", "The Tree", "Fiery Souls", "The March". They also received their first music award and had a very successful tour with Shturcite. The following year, they appeared on the compilation "21st Youth Pop Song Contest" with the song "Deviz" (Девиз, Motto).
@@ -78,7 +78,6 @@ Golden Rock Tour 2004 is the band's second live album recorded during their impr
 <a class="youtube" href="https://www.youtube.com/playlist?list=PLFfEhvyU5hbfaeEs0Lfn5PftBMcevNAKa" target="_blank"><i class="fab fa-youtube fa-3x fa-fw"></i></a>
 <a class="email" href="form.html" target="_blank"><i class="fas fa-envelope fa-3x fa-fw"></i></a>
   </div><!--END OF SOCIAL MEDIA ICON & LINKS-->
-<hr class="d-sm-none">
 </footer><!--END OF FOOTER SECTION-->
  </body>
   </html>
