--- a/axatproject/AboutUs.html
+++ b/axatproject/AboutUs.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="AboutUs.css" type="text/css" />
+    <link rel="stylesheet" href="AboutUs.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Crete+Round|Eater" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <title>About Us</title>
@@ -21,7 +21,7 @@
 <main role="main">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="images/all4.jpg" alt="Ahat group all together">
+      <img class="d-block w-100" src="images/alltog3.jpg" alt="Ahat group all together">
     </div>
 </div>
       <!-- Marketing messaging and featurettes
