this is final version of the project for Milestone 1-ROCK BAND WEB PAGE

--- a/axatproject/AboutUs.html
+++ b/axatproject/AboutUs.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="AboutUs.css" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Crete+Round|Eater" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface%7cCrete+Round%7cEater" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <title>About Us</title>
 </head><!--END HEAD SECTION-->
@@ -14,11 +14,11 @@
 <body><!--BODY SECTION-->
     <header>
       <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="#">TEAM MEMBERS</a>
+        <a class="navbar-brand" href="#">MEMBERS</a>
       </nav>
     </header>
     <hr class="featurette-divider">
-<main role="main">
+<main>
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img class="d-block w-100" src="images/alltog3.jpg" alt="Ahat group all together">
@@ -31,13 +31,13 @@
         <!-- Three columns of text below the carousel -->
         <div class="row">
           <div class="col-lg-4">
-            <img class="rounded-circle" src="images/Zvezdomir Keremedchiev.jpg" alt="Zvezdomir Keremedchiev" width="140" height="140">
-            <h2>Zvezdomir Keremedchiev- zvezdi-Vocal</h2>
+            <img class="rounded-circle" src="images/Zvezdomir_Keremedchiev.jpg" alt="Zvezdomir Keremedchiev" width="140" height="140">
+            <h2>Zvezdomir Keremedchiev-Zvezdi-Vocal</h2>
             <p>born: 3June 1964</p>
             <p><a class="btn btn-secondary" href="https://bg.wikipedia.org/wiki/%D0%97%D0%B2%D0%B5%D0%B7%D0%B4%D0%BE%D0%BC%D0%B8%D1%80_%D0%9A%D0%B5%D1%80%D0%B5%D0%BC%D0%B8%D0%B4%D1%87%D0%B8%D0%B5%D0%B2" role="button" target="_blank">Read More... &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
-            <img class="rounded-circle" src="images/Antoan Hadad.jpg" alt="Antoan Hadad" width="140" height="140">
+            <img class="rounded-circle" src="images/Antoan_Hadad.jpg" alt="Antoan Hadad" width="140" height="140">
             <h2>Antoan Hadad - Guitar</h2>
             <p>Born: 24March 1967</p>
             <p><a class="btn btn-secondary" href="https://bg.wikipedia.org/wiki/%D0%90%D1%85%D0%B0%D1%82_(%D0%B3%D1%80%D1%83%D0%BF%D0%B0)#%D0%A1%D1%8A%D1%81%D1%82%D0%B0%D0%B2" role="button" target="_blank">Read More... &raquo;</a></p>
@@ -49,7 +49,7 @@
             <p><a class="btn btn-secondary" href="http://www.nordkeyboards.com/artist/antoni-georgiev" role="button" target="_blank">Read More... &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
            <div class="col-lg-4">
-            <img class="rounded-circle" src="images/Bojidar Glavev.jpg" alt="Bojidar Glavev" width="140" height="140">
+            <img class="rounded-circle" src="images/Bojidar_Glavev.jpg" alt="Bojidar Glavev" width="140" height="140">
             <h2>Bojidar Glavev - Guitar</h2>
             <p>Born: 12June 1963</p>
             <p><a class="btn btn-secondary" href="https://bg.wikipedia.org/wiki/%D0%91%D0%BE%D0%B6%D0%B8%D0%B4%D0%B0%D1%80_%D0%93%D0%BB%D0%B0%D0%B2%D0%B5%D0%B2" role="button" target="_blank">Read More... &raquo;</a></p>
