improving html change html2 to html and remove style line from html files

--- a/axatproject/AboutUs.html
+++ b/axatproject/AboutUs.html
@@ -105,7 +105,7 @@ From now on for AXAT - as Denis likes to put it - "everything happens in future 
       <!-- FOOTER -->
       <footer class="container-full">
         <p class="float-right"><a href="#">Back to top</a></p>
-        <p >&copy; 1986-2018 AXAT &middot; <a href="index2.html">HOME</a></p>
+        <p >&copy; 1986-2018 AXAT &middot; <a href="index.html">HOME</a></p>
       </footer><!--/ FOOTER-->
     </main>
   </body><!--/ BODY-->
