--- a/axatproject/VIDEOS.html
+++ b/axatproject/VIDEOS.html
@@ -130,7 +130,7 @@
        <!-- FOOTER -->
       <footer class="container-full">
         <p class="float-right"><a href="#">Back to top</a></p>
-        <p >&copy; 1986-2018 AXAT &middot; <a href="index2.html">HOME</a></p>
+        <p >&copy; 1986-2018 AXAT &middot; <a href="index.html">HOME</a></p>
       </footer>
       <!--/ FOOTER-->
   </body>
